deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    workload.user.cattle.io/workloadselector: deployment-safescarf-integration-safescarf-integration
  name: integration-website
  namespace: safescarf-integration
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: safescarf-integration
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: safescarf-integration      
    spec:
      containers:
      - image: registry.devops.telekom.de/dt-cloud-security/safescarf-integration:${RELEASE}
        imagePullPolicy: Always
        name: safescarf-integration
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 5m
            memory: 12Mi
          limits:
            cpu: 50m
            memory: 45Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 101
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
        - mountPath: /var/cache/nginx
          name: tmp-volume
        - mountPath: /var/log/nginx
          name: tmp-volume
        - mountPath: /var/run
          name: tmp-volume
      restartPolicy: Always
      imagePullSecrets:
      - name: mcicd  # change mtr to your registry name created in the Rancher UI
      volumes:
        - emptyDir: {}
          name: tmp-volume
