service.yml
apiVersion: v1
kind: Service
metadata:
  name: safescarf-integration-service
  namespace: safescarf-integration
spec:
  clusterIP: None
  ports:
  - name: default
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: safescarf-integration
  sessionAffinity: None
  type: ClusterIP
